[package]
name = "seed_fetcher_derive"
version = "0.1.0"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
edition = "2018"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
regex = "1"
serde = "1"
seed = "0.8"

[dependencies.syn]
version = "1"
features = ["derive", "parsing", "extra-traits"]
